unpackaged/main/default/objects/Treatment__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External - Consultant Direct</fullName>
            </value>
            <value>
                <fullName>External - Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>