unpackaged/main/default/objects/Treatment__c/fields/Consultant_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Facility Consultant is an Individual (Contact) who works at a Facility (Account); select when cost is payable to the Facility</description>
    <inlineHelpText>A Facility Consultant is an Individual (Contact) who works at a Facility (Account); select when cost is payable to the Facility</inlineHelpText>
    <label>Facility Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>