unpackaged/main/default/objects/Treatment__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Treatments (Facility)</relationshipLabel>
    <relationshipName>Treatments2</relationshipName>
    <type>Lookup</type>
</CustomField>