unpackaged/main/default/objects/Treatment__c/fields/Internal_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Internal_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>