unpackaged/main/default/objects/Treatment__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <displayFormat>TMT-{00000}</displayFormat>
    <label>Treatment</label>
    <type>AutoNumber</type>
</CustomField>