unpackaged/main/default/objects/Treatment__c/fields/Treatment_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Treatment_End_Date_Time__c</fullName>
    <label>Treatment End Date/Time</label>
    <type>DateTime</type>
</CustomField>