unpackaged/main/default/objects/Treatment__c/fields/Treatment_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Start_Date_Time__c</fullName>
    <label>Treatment Start Date/Time</label>
    <type>DateTime</type>
</CustomField>