unpackaged/main/default/objects/Treatment__c/fields/Type_DEPRECATE__c.field-meta.xml
<CustomField>
    <fullName>Type_DEPRECATE__c</fullName>
    <label>Type DEPRECATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External (Consultant)</fullName>
            </value>
            <value>
                <fullName>External (Facility)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>